--- a/css/style.css
+++ b/css/style.css
@@ -18,20 +18,41 @@ body {
 }
 
 .card {
-  margin: 5px;
-  background-color: #FDA937;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 150px;
-  width: 150px;
+    position: relative;
+    transition: all 0.4s linear;
+    transform-style: preserve-3d;
+    margin: 5px;
+}
+
+.card,
+.front,
+.back {
+    height: 150px;
+    width: 150px;
+}
+
+.back,
+.front {
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.front {
+    background: #25215f url('../img/itd-logo.jpg') no-repeat center center;
+}
+
+.back {
+    transform: rotateY(180deg);
+    background-color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .selected {
-    border: 4px solid blue;
+    transform: rotateY(180deg);
 }
 
-.match {
-    border: 4px solid red;
-    background-image: none !important;
+.match .front {
+    background: #25215f !important;
 }
