--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+    font-family: 'Roboto Slab', serif;
+}
+
 body {
   margin: 20px 0;
   /* background: #FDA937; */
@@ -14,7 +18,6 @@ body {
 h1 {
     text-align: center;
     color: white;
-    font-family: 'Roboto Slab', serif;
     text-transform: uppercase;
 }
 
@@ -66,10 +69,64 @@ h1 {
     background: #25215f !important;
 }
 
+.game-over {
+    color: white;
+    background-color: #25215f;
+    text-align: center;
+    padding: 40px;
+    max-width: 1470px;
+    /* max-width: 900px; */
+    margin: 0 auto;
+}
+
+.game-over .close-btn {
+    float: right;
+    font-size: 36px;
+    margin-top: -25px;
+    cursor: pointer;
+}
+
+.game-over h2 {
+    font-size: 34px;
+}
+
+.game-over p {
+    font-size: 28px;
+}
+
+.game-over button {
+    display: block;
+    margin: 30px auto;
+}
+
+.game-over .emoji {
+    font-size:100px;
+}
+
+.btn {
+    color: #fff;
+    background-color: #fda937;
+    font-weight: bold;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.btn-xmas {
+    background-color: #ef404a;
+}
+
 @media screen and (max-width: 1440px) {
 
     .grid {
         max-width: 1122px;
+    }
+
+    .game-over {
+        max-width: 1114px;
     }
 
     .card,
