--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,21 @@ h1 {
     background-color: #ef404a;
 }
 
+.footer {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 1440px) {
 
     .grid {
