--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html {
@@ -23,15 +24,23 @@ h1 {
 .grid {
   max-width: 1440px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+ -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
 }
 
 .card {
     position: relative;
-    transition: all 0.4s linear;
-    transform-style: preserve-3d;
+    -webkit-transition: all .4s linear;
+         -o-transition: all .4s linear;
+            transition: all 0.4s linear;
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
     margin: 5px;
 }
 
@@ -45,7 +54,8 @@ h1 {
 .back,
 .front {
     position: absolute;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
 }
 
 .front::before {
@@ -60,7 +70,8 @@ h1 {
 }
 
 .back {
-    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
     background-color: white;
     background-size: contain;
     background-repeat: no-repeat;
@@ -68,7 +79,8 @@ h1 {
 }
 
 .selected {
-    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
 }
 
 .match .front {
